stageleft_macro/src/quote_impl/snapshots/stageleft_macro__quote_impl__tests__capture_local_mut@macro_tokens.snap
---
source: stageleft_macro/src/quote_impl/mod.rs
expression: "prettyplease :: unparse(& wrapped)"
---
fn main() {
    {
        move |__stageleft_ctx: &_, __output: &mut ::stageleft::internal::QuotedOutput| {
            #[allow(unused, non_upper_case_globals, non_snake_case)]
            let x = {
                let _out = ::stageleft::runtime_support::FreeVariableWithContext::uninitialized(
                    &x,
                    __stageleft_ctx,
                );
                __output
                    .captures
                    .push(::stageleft::internal::Capture {
                        ident: "x",
                        tokens: ::stageleft::runtime_support::FreeVariableWithContext::to_tokens(
                            x,
                            __stageleft_ctx,
                        ),
                    });
                _out
            };
            if true {
                __output.module_path = module_path!();
                __output.crate_name = option_env!("STAGELEFT_FINAL_CRATE_NAME")
                    .unwrap_or(env!("CARGO_PKG_NAME"));
                __output.tokens = "x += 2";
                #[allow(unused, non_upper_case_globals, non_snake_case)]
                ::std::mem::forget(x);
                unsafe {
                    return ::std::mem::MaybeUninit::uninit().assume_init();
                }
            }
            #[allow(unreachable_code, unused_qualifications)] { x += 2 }
        }
    }
}
